other-vpol/block-pod-exec-by-namespace-label/.chainsaw-test/permissions.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno:pods:view
  labels:
    rbac.kyverno.io/aggregate-to-background-controller: "true"
    rbac.kyverno.io/aggregate-to-admission-controller: "true"
    rbac.kyverno.io/aggregate-to-reports-controller: "true"    
rules:
- apiGroups:
  - ''
  resources:
  - 'pods/exec'
  verbs:
  - get
  - list
  - watch
